# mlops

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  clearml.conf  docker-compose.yaml  pyproject.toml
grpc/: grpc_client.py  grpc_server.py  models_fitting_pb2.py  models_fitting_pb2.pyi  models_fitting_pb2_grpc.py
mlops_hse/: main.py  two_classes.py
model_training/: exceptions.py  model_training.py
rest/: controller.py
streamlit_app/: streamlit_app.py
tests/: test_model_training.py
