[tool.poetry]
name = "mlops-hse"
version = "0.1.0"
description = ""
authors = ["Kirill Sharkov <kirill.office75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.1"
catboost = "^1.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
