[tool.poetry]
name = "model_training"
version = "0.1.0"
description = ""
authors = ["Kirill Sharkov <kirill.office75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.1"
catboost = "^1.2.2"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
streamlit = "^1.28.1"
boto3 = "^1.29.3"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"


[tool.poetry.group.grpc.dependencies]
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start_fast_api = "rest.controller:start"
start_streamlit = "streamlit_app.streamlit_app:streamlit_app"